--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -1,10 +1,12 @@
-{{!< auth}}
+{{!< main}}
 <div class="card">
     <h2 class="card__title">Вход</h2>
     <form class="form">
         {{> 'fieldset/fieldset' label="Логин" type="text" name="login"}}
         {{> 'fieldset/fieldset' label="Пароль" type="password" name="password"}}
-        {{> 'button/button' label="Авторизоваться" className="form__button"}}
-        {{> 'link/link' text="Нет аккаунта?" href="" centred=true}}
+        {{> 'button/button' label="Войти" className="form__button"}}
+        {{> 'link/link' text="Нет аккаунта?" href="signup.hbs" centred=true}}
+        {{> 'link/link' text="Чаты" href="chats.hbs" centred=true}}
+        {{> 'link/link' text="Чаты" href="profile.hbs" centred=true}}
     </form>
 </div>
