--- a/src/partials/fieldset/fieldset.hbs
+++ b/src/partials/fieldset/fieldset.hbs
@@ -1,4 +1,4 @@
 <fieldset class="fieldset">
-    <legend class="fieldset__label">{{label}}</legend>
-    <input type="{{type}}" placeholder="{{placeholder}}" name="{{name}}" class="fieldset__input">
+    <label for="{{name}}" class="fieldset__label">{{label}}</label>
+    <input id="{{name}}" type="{{type}}" placeholder="{{placeholder}}" name="{{name}}" class="fieldset__input" autocomplete="off">
 </fieldset>
