--- a/src/styles/main.pcss
+++ b/src/styles/main.pcss
@@ -8,6 +8,16 @@
     box-sizing: border-box;
 }
 
+html {
+    height: 100%;
+}
+
+body {
+    height: 100%;
+    margin: 0;
+    background: #BBBBBB;
+}
+
 ul {
     list-style-type: none;
     margin: 0;
@@ -18,19 +28,18 @@ h2 {
     margin: 0;
 }
 
-.card {
-    position: absolute;
-    left: 50%;
-    top: 50%;
+.form {
+    text-align: center;
+}
 
+.card {
     width: 340px;
+    margin: 20px auto;
     padding: 50px 30px 30px;
 
     background: #FFFFFF;
     box-shadow: 0 0 6px rgba(0, 0, 0, 0.14);
     border-radius: 12px;
-
-    transform: translate3d(-50%, -50%, 0);
 
     &__title {
         margin-bottom: 50px;
@@ -43,4 +52,44 @@ h2 {
 
         color: #1E1E1E;
     }
+}
+
+.page {
+    display: flex;
+    height: 100vh;
+    /* calculate the height. Header is 30px */
+}
+
+.sideBar {
+    width: 200px;
+    background: red;
+}
+
+.content {
+    background: blue;
+    position:relative;
+    flex: 1 0 auto;
+    padding-bottom: 80px;
+    padding-top: 50px;
+    /* enable grow, disable shrink */
+    &_top {
+        background: #BBBBBB;
+        position: absolute;
+        top: 0;
+        width: 100%;
+        height: 50px;
+    }
+    &_message {
+        background: #BBBBBB;
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        height: 80px;
+    }
+}
+.profile {
+    margin: 50px auto;
+    width: 500px;
+    background: white;
+
 }
