add pages profile, avatar, 404, 500

--- a/src/pages/profile.hbs
+++ b/src/pages/profile.hbs
@@ -1,6 +1,11 @@
 {{!< main}}
 <div class="profile">
     <h2 class="profile__title">Профиль пользователя</h2>
+    <div class="profile_avatar">
+        <a href="changeAvatar.hbs" class="profile__avatar">
+            <img src="#" alt="Аватар" class="avatar__image">
+        </a>
+    </div>
     <div class="profile_list">
         <div><div>Почта</div><div>pochta@yandex.ru</div></div>
         <div><div>Логин</div><div>pochta@yandex.ru</div></div>
