--- a/src/pages/500.hbs
+++ b/src/pages/500.hbs
@@ -5,10 +5,13 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="../styles/main.pcss">
-    <title>Супер Чат</title>
+    <title>Ошибка 500</title>
 </head>
 <body>
-    {{{body}}}
+<div class="error-page">
+    <div class="error__number">500</div>
+    <div class="error__text">Мы уже фиксим</div>
+    {{> 'link/link' text="Назад к чатам" href="chats.hbs" centred=true}}
+</div>
 </body>
 </html>
