--- a/src/pages/chats.hbs
+++ b/src/pages/chats.hbs
@@ -1,7 +1,7 @@
 {{!< main}}
 
 <div class="page">
-    <div class="sideBar">
+    <div class="sidebar">
         <div>
             box 1
         </div>
