--- a/src/partials/button/button.pcss
+++ b/src/partials/button/button.pcss
@@ -1,6 +1,6 @@
 .button {
     width: 100%;
-    background: #3369F3;
+    background: var(--color-border-bottom);
     border-radius: 8px;
     margin: 10px 0;
     padding: 12px 0;
@@ -10,7 +10,7 @@
     line-height: 13px;
     text-align: center;
 
-    color: #FFFFFF;
+    color: var(--bg-white);
 
     border: none;
     outline: none;
