--- a/src/partials/fieldset/fieldset.pcss
+++ b/src/partials/fieldset/fieldset.pcss
@@ -8,7 +8,7 @@
         font-weight: 500;
         font-size: 12px;
 
-        color: #999999;
+        color: var(--color-placeholder);
     }
 
     &__input {
@@ -16,16 +16,16 @@
         padding: 7px 0;
         border: none;
         outline: none;
-        border-bottom: 1px solid #3369F3;
+        border-bottom: 1px solid var(--color-border-bottom);
 
         font-weight: 500;
         font-size: 13px;
         line-height: 13px;
 
-        color: #1E1E1E;
+        color: var(--color-text);
 
         &::placeholder {
-            color: #999999;
+            color: var(--color-placeholder);
         }
     }
 }
