--- a/src/styles/main.pcss
+++ b/src/styles/main.pcss
@@ -1,3 +1,4 @@
+@import './_variables.pcss';
 @import '../partials/button/button.pcss';
 @import '../partials/fieldset/fieldset.pcss';
 @import '../partials/link/link.pcss';
@@ -15,7 +16,7 @@ html {
 body {
     height: 100%;
     margin: 0;
-    background: #BBBBBB;
+    background: var(--bg-grey);
 }
 
 ul {
@@ -37,7 +38,7 @@ h2 {
     margin: 20px auto;
     padding: 50px 30px 30px;
 
-    background: #FFFFFF;
+    background: var(--bg-white);
     box-shadow: 0 0 6px rgba(0, 0, 0, 0.14);
     border-radius: 12px;
 
@@ -50,7 +51,7 @@ h2 {
 
         text-align: center;
 
-        color: #1E1E1E;
+        color: var(--color-text);
     }
 }
 
@@ -62,25 +63,25 @@ h2 {
 
 .sidebar {
     width: 200px;
-    background: red;
+    background: var(--bg-grey);
 }
 
 .content {
-    background: blue;
+    background: var(--bg-white);
     position:relative;
     flex: 1 0 auto;
     padding-bottom: 80px;
     padding-top: 50px;
     /* enable grow, disable shrink */
     &_top {
-        background: #BBBBBB;
+        background: var(--bg-grey);
         position: absolute;
         top: 0;
         width: 100%;
         height: 50px;
     }
     &_message {
-        background: #BBBBBB;
+        background: var(--bg-grey);
         position: absolute;
         bottom: 0;
         width: 100%;
@@ -90,6 +91,6 @@ h2 {
 .profile {
     margin: 50px auto;
     width: 500px;
-    background: white;
+    background: var(--bg-white);
 
 }
