fix form profile

--- a/src/pages/404.hbs
+++ b/src/pages/404.hbs
@@ -3,5 +3,5 @@
 <div class="error-page">
     <div class="error__number">404</div>
     <div class="error__text">Не туда попали</div>
-    {{> 'link/link' text="Назад к чатам" href="chats.hbs" centred=true}}
+    {{> 'link/link' text="Назад к чатам" href="chats.hbs"}}
 </div>
