--- a/src/pages/changePassword.hbs
+++ b/src/pages/changePassword.hbs
@@ -7,6 +7,6 @@
         {{> 'fieldset/fieldset' label="Новый пароль" type="password" name="newPassword"}}
         {{> 'fieldset/fieldset' label="Повторите новый пароль" type="password" name="newPasswordRepeat"}}
         {{> 'button/button' label="Сохранить" className="form__button"}}
-        {{> 'link/link' text="Войти" href="index.hbs" centred=true}}
+        {{> 'link/link' text="Войти" href="index.hbs"}}
     </form>
 </div>
