--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -5,8 +5,8 @@
         {{> 'fieldset/fieldset' label="Логин" type="text" name="login"}}
         {{> 'fieldset/fieldset' label="Пароль" type="password" name="password"}}
         {{> 'button/button' label="Войти" className="form__button"}}
-        {{> 'link/link' text="Нет аккаунта?" href="signup.hbs" centred=true}}
-        {{> 'link/link' text="Чаты" href="chats.hbs" centred=true}}
-        {{> 'link/link' text="Чаты" href="profile.hbs" centred=true}}
+        {{> 'link/link' text="Нет аккаунта?" href="signup.hbs"}}
+        {{> 'link/link' text="Чаты" href="chats.hbs"}}
+        {{> 'link/link' text="Чаты" href="profile.hbs"}}
     </form>
 </div>
