--- a/src/styles/_variables.pcss
+++ b/src/styles/_variables.pcss
@@ -6,4 +6,6 @@
     --color-placeholder: #999999;
     --color-border-bottom: #3369F3;
     --color-link: #3369F3;
+    --color-gray: #999999;
+    --color-red: #FF0000;
 }
