--- a/src/pages/500.hbs
+++ b/src/pages/500.hbs
@@ -11,7 +11,7 @@
 <div class="error-page">
     <div class="error__number">500</div>
     <div class="error__text">Мы уже фиксим</div>
-    {{> 'link/link' text="Назад к чатам" href="chats.hbs" centred=true}}
+    {{> 'link/link' text="Назад к чатам" href="chats.hbs"}}
 </div>
 </body>
 </html>
