--- a/src/pages/signup.hbs
+++ b/src/pages/signup.hbs
@@ -10,6 +10,6 @@
         {{> 'fieldset/fieldset' label="Пароль" type="password" name="password"}}
         {{> 'fieldset/fieldset' label="Пароль (ещё раз)" type="password" name="password_repeat"}}
         {{> 'button/button' label="Зарегистрироваться" className="form__button"}}
-        {{> 'link/link' text="Войти" href="index.hbs" centred=true}}
+        {{> 'link/link' text="Войти" href="index.hbs"}}
     </form>
 </div>
